force-app/main/default/objects/EmailMessage/fields/Reply_Time__c.field-meta.xml
<CustomField>
    <fullName>Reply_Time__c</fullName>
    <label>Reply Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>