force-app/main/default/objects/EmailMessage/fields/SLA_Time_Capture__c.field-meta.xml
<CustomField>
    <fullName>SLA_Time_Capture__c</fullName>
    <label>SLA Time Capture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>