force-app/main/default/objects/EmailMessage/fields/Subject_Indexed__c.field-meta.xml
<CustomField>
    <fullName>Subject_Indexed__c</fullName>
    <externalId>true</externalId>
    <label>Subject - Indexed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>